# dnd5th-character-sheet

./: .gitignore  Cargo.toml  package-lock.json  package.json
assets/: index.html  index.js
docs/beta/: 1.js  index.html  main.js
src/: lib.rs
src/component/: app.rs  common_data.rs  experience.rs  growth.rs  item.rs  key_value.rs  mod.rs  select.rs
src/component/function/: empty.rs  icon.rs  mod.rs  text.rs
src/model/: character.rs
src/page/: index.rs
src/util/: hash.rs  luid.rs  mod.rs  prop.rs
style/: app.scss  common-data.scss  experience.scss  growth.scss  icon.scss  item.scss  key-value.scss  mod.scss  select.scss
